<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayGameActivity">

    <Button
        android:id="@+id/single_player_game_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player_game_st"
        app:layout_constraintBottom_toTopOf="@+id/multi_player_game_st"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_bt"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/multi_player_game_st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_player_game_st"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_player_game_bt"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/daily_challenge_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_challenge_st"
        app:layout_constraintBottom_toTopOf="@+id/friend_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/friend_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_mode_st"
        app:layout_constraintBottom_toTopOf="@+id/single_player_game_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_challenge_bt"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>