<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultsActivity">

        <Button
            android:id="@+id/return_main_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_main_st"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/links_num_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/links_clicked_st"
            app:layout_constraintBottom_toTopOf="@+id/path_taken_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/path_taken_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paths_taken_st"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/placement_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/links_num_text"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/placement_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placement_st"
            app:layout_constraintBottom_toTopOf="@+id/time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path_taken_text"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_seconds_st"
            app:layout_constraintBottom_toTopOf="@+id/return_main_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placement_text"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>